# SFML-EventManager

./: .gitignore  CMakeLists.txt  Event.cpp  Event.hpp  EventFunctionHandle.hpp  EventFunctionTrigger.hpp  EventManager.cpp  EventManager.hpp  EventManager.vcxproj  EventManager.vcxproj.filters  FunctionHandle.hpp  FunctionTrigger.hpp  Handle.cpp  Handle.hpp  IListenSource.hpp  IListenTarget.hpp  IListener.hpp  ListenSource.hpp  ListenTarget.hpp  Listener.cpp  Listener.hpp  RenderWindowListenSource.cpp  RenderWindowListenSource.hpp  RenderWindowListenTarget.cpp  RenderWindowListenTarget.hpp  Trigger.hpp  build.bat  main.cpp  run.bat
include/: EventManager.hpp
src/: EventManager.cpp
